kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shortlink-ingress
spec:
  ingressClassName: traefik

  rules:
  - http:
      paths:

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5000

      - path: /r
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5000

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
